syntax = "proto3";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "fr.agrouagrou.proto";

package proto;

enum GameStateStatus {
  LOOKING_FOR_PLAYERS = 0;
  NIGHT_START = 1;
  NIGHT_FORTUNE_TELLER = 2;
  NIGHT_WEREWOLF = 3;
  NIGHT_WITCH = 4;
}

// GetGameState
message GetGameStateReply {
  GameStateStatus status = 1;
}

// StreamGameStatus
message StreamGameStatusReply {
  GameStateStatus status = 1;
}

service GameState {
  rpc GetGameState (google.protobuf.Empty) returns (GetGameStateReply) {}
  rpc StreamGameState (google.protobuf.Empty) returns (stream StreamGameStatusReply) {}
}
